--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
-allprojects {
-    //Put instructions for all projects
+apply plugin: 'java'
+
+sourceCompatibility = 16
+targetCompatibility = 16
+
+repositories {
+    mavenCentral()
 }
 
-subprojects {
-    //Put instructions for each sub project
-    apply plugin: "java"
-    repositories {
-        mavenCentral()
-    }
+//dependencies {
+//    testCompile 'junit:junit:4.13.2'
+//    testCompile "org.assertj:assertj-core:3.21.0"
+//    testCompile "pl.pragmatists:JUnitParams:1.1.1"
+//}
 
-
-
-    dependencies {
-        testCompile "junit:junit:4.12"
-        testCompile "org.assertj:assertj-core:2.6.0"
-        testCompile "pl.pragmatists:JUnitParams:1.0.6"    }
+dependencies {
+    testImplementation "junit:junit:4.13"
+    testImplementation "org.assertj:assertj-core:2.6.0"
+    testImplementation "pl.pragmatists:JUnitParams:1.0.6"
 }
