--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
 
 dependencies {
     testImplementation "junit:junit:4.13"
+    testImplementation "junit:junit:4.13"
     testImplementation "org.assertj:assertj-core:2.6.0"
     testImplementation "pl.pragmatists:JUnitParams:1.0.6"
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+
 }
