fix: travis ci gradle build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,12 @@
 language: java
 sudo: false
+
+install: skip
+
+
+os: linux
+dist: trusty
+jdk: oraclejdk8
+
+script:
+  - ./gradlew build --scan -s
